--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 idna==3.10
+markdownify==0.14.1
 requests==2.32.3
+six==1.17.0
 soupsieve==2.6
 typing_extensions==4.12.2
 urllib3==2.3.0
