--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.4.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -12,6 +13,7 @@ mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.3
 packaging==24.2
+psutil==7.0.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
@@ -26,3 +28,4 @@ tqdm==4.67.1
 transformers==4.49.0
 typing_extensions==4.12.2
 urllib3==2.3.0
+webencodings==0.5.1
