--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ accelerate==1.4.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 filelock==3.17.0
 fsspec==2025.2.0
 huggingface-hub==0.29.1
 idna==3.10
 Jinja2==3.1.5
+joblib==1.4.2
 markdownify==0.14.1
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
+nltk==3.9.1
 numpy==2.2.3
 packaging==24.2
 psutil==7.0.0
