completed basic sentence embeddings

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,20 @@ networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.3
 packaging==24.2
+pillow==11.1.0
 psutil==7.0.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
 six==1.17.0
 soupsieve==2.6
 sympy==1.13.1
+threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.6.0
 tqdm==4.67.1
